force-app/main/default/objects/Employee_Talent_Referral__c/Employee_Talent_Referral__c.object-meta.xml
<CustomObject>
    <description>HR Talent referral tracking</description>
    <label>Talent Referral</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Talent Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talent Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>