force-app/main/default/objects/Employee_Talent_Referral__c/fields/Addtl_Notes__c.field-meta.xml
<CustomField>
    <fullName>Addtl_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quick Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>