force-app/main/default/objects/Employee_Talent_Referral__c/fields/Applicant_s_Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Areas_of_Interest__c</fullName>
    <label>Applicant&#39;s Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankcard</fullName>
            </value>
            <value>
                <fullName>Buildings</fullName>
            </value>
            <value>
                <fullName>Corporate Banking Group</fullName>
            </value>
            <value>
                <fullName>Corporate Compliance</fullName>
            </value>
            <value>
                <fullName>Credit Admin</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Treasury</fullName>
            </value>
            <value>
                <fullName>FNNI Legal and Compliance</fullName>
            </value>
            <value>
                <fullName>Home Mortgage Division</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Management Trainee Program</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Retail Banking Group</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Wealth Mgmt and Investment Svc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>