force-app/main/default/objects/Employee_Talent_Referral__c/fields/Applicant_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Status__c</fullName>
    <label>Applicant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Referral</fullName>
                <default>true</default>
                <label>New Referral</label>
            </value>
            <value>
                <fullName>IGT</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>No Current Opportunities</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>