force-app/main/default/objects/Employee_Talent_Referral__c/fields/Candidate_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Address_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Address: City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>