force-app/main/default/objects/Employee_Talent_Referral__c/fields/Candidate_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Address_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Address: Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>