force-app/main/default/objects/Employee_Talent_Referral__c/fields/Candidate_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Address_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Address: Street</label>
    <type>TextArea</type>
</CustomField>