force-app/main/default/objects/Employee_Talent_Referral__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Email</label>
    <type>Email</type>
</CustomField>