force-app/main/default/objects/Employee_Talent_Referral__c/fields/Candidate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate Phone Number</label>
    <type>Phone</type>
</CustomField>