force-app/main/default/objects/Employee_Talent_Referral__c/fields/Current_Salary_Rane__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary_Rane__c</fullName>
    <label>Current Salary Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$30K-$40K</fullName>
            </value>
            <value>
                <fullName>$41k-$50K</fullName>
            </value>
            <value>
                <fullName>$51k-$60K</fullName>
            </value>
            <value>
                <fullName>$61k-$70K</fullName>
            </value>
            <value>
                <fullName>$71k-$80K</fullName>
            </value>
            <value>
                <fullName>$81k-$90K</fullName>
            </value>
            <value>
                <fullName>$91k-$100K</fullName>
            </value>
            <value>
                <fullName>$101k-$110K</fullName>
            </value>
            <value>
                <fullName>$111k-$120K</fullName>
            </value>
            <value>
                <fullName>$121k-$130K</fullName>
            </value>
            <value>
                <fullName>$131+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>