force-app/main/default/objects/Employee_Talent_Referral__c/fields/Date_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Referral__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Referral</label>
    <type>Date</type>
</CustomField>