force-app/main/default/objects/Employee_Talent_Referral__c/fields/Desired_Career_Bands__c.field-meta.xml
<CustomField>
    <fullName>Desired_Career_Bands__c</fullName>
    <label>Desired Career Bands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>