force-app/main/default/objects/Employee_Talent_Referral__c/fields/Desired_Position__c.field-meta.xml
<CustomField>
    <fullName>Desired_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>