force-app/main/default/objects/Employee_Talent_Referral__c/fields/Minimum_Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Total_Compensation__c</fullName>
    <label>Minimum Total Compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>