force-app/main/default/objects/Employee_Talent_Referral__c/fields/Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Employer (if known)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>