force-app/main/default/objects/Employee_Talent_Referral__c/fields/Referral_Source_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referring Employee (if applicable)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>