force-app/main/default/objects/Employee_Talent_Referral__c/fields/Referrer_Dept__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Dept__c</fullName>
    <inlineHelpText>Please select the Referrer&#39;s department if they are a current employee</inlineHelpText>
    <label>Referrer Dept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Consumer Banking</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
            <value>
                <fullName>FNTS</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>