force-app/main/default/objects/Employee_Talent_Referral__c/fields/Referring_Employee_Email_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee_Email_if_applicable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter referring employee&#39;s email address</inlineHelpText>
    <label>Referring Employee Email (if applicable)</label>
    <type>Email</type>
</CustomField>