force-app/main/default/objects/Employee_Talent_Referral__c/fields/Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>Resume_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Path to Resume (for Recruiters only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>